update index.html a lil bit

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>George's Thing</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,24 +10,22 @@
   <header>
     <nav>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Experience and Education</a></li>
+      <li><a href="#">About Moi, the French Failure</a></li>
     </nav>
     <img src="me.png" alt="Drawing of Jane Smith">
-    <h1>Jane Smith</h1>
-    <p>Location: Portland, Oregon, USA</p>
+    <h1>Definitely George</h1>
+    <p>Not that other one</p>
   </header>
   <main>
     <h2>Background</h2>
-    <p>I'm an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I'm excited to bring my life experience to the process of building fantastic looking websites.</p>
-    <p>I've been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+    <p>I enjoy corn.</p>
     <h2>Goals</h2>
-    <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+    <p>I want to make mad stacks and make mad people mad. I mean laugh.</p>
     <ul>
        <li>HTML</li>
        <li>CSS</li>
        <li>JavaScript</li>
     </ul>
-    <p>I'd like to work for a web design firm helping clients create an impressive online presence.</p>
   </main>
   <footer>
     <ul>
@@ -36,7 +33,7 @@
       <li><a href="#">LinkedIn</a></li>
       <li><a href="#">Github</a></li>
     </ul>
-    <p>Copyright 2015, Jane Smith</p>
+    <p>Copyright 2020, Geo Kru</p>
   </footer>
 </div>
 </body>
