--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>George's Thing</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div>
-  <header>
-    <nav>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Moi, the French Failure</a></li>
-    </nav>
-    <img src="me.png" alt="Drawing of Jane Smith">
-    <h1>Definitely George</h1>
-    <p>Not that other one</p>
-  </header>
-  <main>
-    <h2>Background</h2>
-    <p>I enjoy corn.</p>
-    <h2>Goals</h2>
-    <p>I want to make mad stacks and make mad people mad. I mean laugh.</p>
-    <ul>
-       <li>HTML</li>
-       <li>CSS</li>
-       <li>JavaScript</li>
-    </ul>
-  </main>
-  <footer>
-    <ul>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">LinkedIn</a></li>
-      <li><a href="#">Github</a></li>
-    </ul>
-    <p>Copyright 2020, Geo Kru</p>
-  </footer>
-</div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lake Tahoe</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body> 
+    <header id="top" class="main-header">
+      <span class="title">Journey Through the Sierra Nevada Mountains</span>
+      <h1>Lake Tahoe, California</h1>
+    </header>
+		<div class="primary-content t-border">
+			<p class="intro">
+				Lake Tahoe is one of the most breathtaking attractions located in California. It's home to a number of ski resorts, summer outdoor recreation, and tourist attractions. Snow and skiing are a significant part of the area's reputation.
+			</p>
+			<a href="#more">Find out more</a>
+      
+      <div class="wildlife">
+        <h2>Check out all the Wildlife</h2>
+        <p>
+          As spawning season approaches, the fish acquire a humpback and protuberant jaw. After spawning, they die and their carcasses provide a feast for gatherings of <a href="#mink">mink</a>, <a href="#bears">bears</a>, and <a href="#eagles">bald eagles</a>.
+        </p>
+			<a href="#wildlife">See the Wildlife</a>
+		</div><!-- End .primary-content -->
+
+		<div class="secondary-content t-border"> 
+      <div>
+        <h3>From Tents to Resorts</h3>
+        <p>
+          Lake Tahoe is full of wonderful places to stay. You have the ability to sleep in the outdoors in a tent, or relax like a king at a five star resort. Here are our top three resorts:
+        </p>
+        <ul>
+          <li><a href="#hotels">Lake Tahoe Resort Hotel</a></li>
+          <li><a href="#resorts">South Lake Tahoe Resorts</a></li>
+          <li><a href="#lodging">Tahoe Ski Resort Lodging</a></li>
+        </ul>		
+      </div>
+      <div>
+        <h3>Pack Accordingly</h3>
+        <p>
+          One of most important things when it comes to traveling through the great outdoors is packing accordingly. Here are a few tips:
+        </p>
+        <ol>
+          <li>Bring layers of clothing</li>
+          <li>Pack sunscreen</li>
+          <li>Carry extra water just in case</li>
+          <li>Pack light</li>
+        </ol>
+      </div>
+		</div><!-- End .secondary-content -->
+    
+		<footer class="main-footer">
+			<p>All rights reserved to the state of <a href="#">California</a>.</p>
+			<a href="#top">Back to top &raquo;</a>
+		</footer>
+  </body>
 </html>
